testsuite/tests/module/mod26.stderr

mod26.hs:3:21: error: [GHC-76037] Not in scope: type variable ‘b’
